Fix vertical align

--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,8 @@ ul {
 
 .monthContainer {
     display: inline-block;
+    vertical-align: top;
+    width: 12em;
 }
 
 .month {
